apps/shiplog/tests/render_md/snapshots/render_md__output_quality__snapshot_html_angle_brackets_in_title.snap
---
source: apps/shiplog/tests/render_md/output_quality.rs
expression: md
---
# Summary

**Window:** 2025-Q1

**Workstreams:** 1

**Events:** 1 PR, 0 reviews, 0 manual events

**Coverage:** Complete

**Sources:** GitHub

## Executive Summary

- **HTML in titles** — 1 PR, 0 reviews, 0 manual events

## Workstreams

### HTML in titles

**Evidence anchors**

- [PR] Fix <div> rendering & HTML <script> injection (1970-01-01) — [acme/repo](https://github.com/acme/repo/pull/1)

**Suggested claim prompts**

- What changed for users, operators, or maintainers?
- Which risk, delay, or repeated work did this reduce?
- Which evidence anchor best proves the change?
- What follow-up or gap should a reviewer know about?

_PRs: 1, Reviews: 0, Manual: 0_

## Receipts

### Workstream: HTML in titles

- [PR] Fix <div> rendering & HTML <script> injection (1970-01-01) — [acme/repo](https://github.com/acme/repo/pull/1)

## Coverage and Limits

Included:
- GitHub: 1 event
- Fetched events: not reported by query slices

Skipped:
- None recorded

Known gaps:
- None recorded

Details:
- **Date window:** 2025-01-01 to 2025-04-01
- **Mode:** merged
- **Sources:** GitHub
- **Completeness:** Complete

## Appendix: All Receipts

### HTML in titles

- [PR] Fix <div> rendering & HTML <script> injection (1970-01-01) — [acme/repo](https://github.com/acme/repo/pull/1)

---

## File Artifacts

- `packet.md` (this review packet)
- `ledger.events.jsonl` (canonical events)
- `coverage.manifest.json` (completeness + slicing)
- `workstreams.suggested.yaml` (auto-generated workstream suggestions)
- `workstreams.yaml` (curated workstreams, created after edits)
- `bundle.manifest.json` (artifact manifest and checksums)
