apps/shiplog/tests/render_md/snapshots/render_md__output_quality__snapshot_markdown_special_chars_in_title.snap
---
source: apps/shiplog/tests/render_md/output_quality.rs
expression: md
---
# Summary

**Window:** 2025-Q1

**Workstreams:** 1

**Events:** 3 PRs, 0 reviews, 0 manual events

**Coverage:** Complete

**Sources:** GitHub

## Executive Summary

- **Markdown syntax in titles** — 3 PRs, 0 reviews, 0 manual events

## Workstreams

### Markdown syntax in titles

**Evidence anchors**

- [PR] Use `Option<T>` instead of null (1970-01-01) — [acme/repo](https://github.com/acme/repo/pull/1)
- [PR] Fix #123: [urgent] pipe | handling (1970-01-01) — [acme/repo](https://github.com/acme/repo/pull/2)
- [PR] Support **bold** and *italic* in docs (1970-01-01) — [acme/repo](https://github.com/acme/repo/pull/3)

**Suggested claim prompts**

- What changed for users, operators, or maintainers?
- Which risk, delay, or repeated work did this reduce?
- Which evidence anchor best proves the change?
- What follow-up or gap should a reviewer know about?

_PRs: 3, Reviews: 0, Manual: 0_

## Receipts

### Workstream: Markdown syntax in titles

- [PR] Use `Option<T>` instead of null (1970-01-01) — [acme/repo](https://github.com/acme/repo/pull/1)
- [PR] Fix #123: [urgent] pipe | handling (1970-01-01) — [acme/repo](https://github.com/acme/repo/pull/2)
- [PR] Support **bold** and *italic* in docs (1970-01-01) — [acme/repo](https://github.com/acme/repo/pull/3)

## Coverage and Limits

Included:
- GitHub: 3 events
- Fetched events: not reported by query slices

Skipped:
- None recorded

Known gaps:
- None recorded

Details:
- **Date window:** 2025-01-01 to 2025-04-01
- **Mode:** merged
- **Sources:** GitHub
- **Completeness:** Complete

## Appendix: All Receipts

### Markdown syntax in titles

- [PR] Use `Option<T>` instead of null (1970-01-01) — [acme/repo](https://github.com/acme/repo/pull/1)
- [PR] Fix #123: [urgent] pipe | handling (1970-01-01) — [acme/repo](https://github.com/acme/repo/pull/2)
- [PR] Support **bold** and *italic* in docs (1970-01-01) — [acme/repo](https://github.com/acme/repo/pull/3)

---

## File Artifacts

- `packet.md` (this review packet)
- `ledger.events.jsonl` (canonical events)
- `coverage.manifest.json` (completeness + slicing)
- `workstreams.suggested.yaml` (auto-generated workstream suggestions)
- `workstreams.yaml` (curated workstreams, created after edits)
- `bundle.manifest.json` (artifact manifest and checksums)
